# standalone-bitcoinkernel

./: MIT  Makefile.am  README.md  configure.ac
doc/man/: Makefile.in
src/: CMakeLists.txt  Makefile.am  clientversion.cpp  clientversion.h  coins.h  txdb.cpp
src/kernel/: chainparams.cpp
